--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: "Course Website"
 description: "Duckiebot exercise reports and code repository"
 theme: minima
 baseurl: "" # Leave empty if hosting at the root
-url: "https://<your-username>.github.io/course-website" # Replace with your actual URL
+url: "https://athonychen.github.io/cmput412/" # Replace with your actual URL
